Fix a bug with overlapping styles

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -65,7 +65,7 @@
   padding-right: 5px;
 }
 
-.employment {
+.select-screen .employment {
   clear: both;
   height: 30px;
   padding: 5px;
